<resources>
    <string name="app_name">TutorialApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="action_search">search</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_frag_activity_first">FragActivityFirst</string>
    <string name="title_activity_plan_step1">PlanStep1</string>
    <string name="title_activity_plan_step2">PlanStep2</string>
    <string name="title_activity_plan_step3">Monster List</string>
    <string name="title_activity_mon_detail_view">MonDetailView</string>
    <string name="title_activity_plan_step3b">PlanStep3b</string>
    <string name="title_activity_oauth_test">OauthTest</string>
    <string name="title_activity_new_monster">NewMonster</string>
    <string name="new_mon_desc">description</string>
    <string name="save">save</string>
    <string name="desc">description</string>
    <string name="name">name</string>
    <string name="create_new_mon">create new monster</string>
    <string name="img_url">image url</string>
    <string name="cancel">cancel</string>
    <string name="ph">placeholder text</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sandbox">Sandbox</string>
</resources>
