<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.skaliak.tutorialapp.NewMonster"
    android:weightSum="1">

    <TextView android:text="@string/create_new_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_mon_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp" />

    <EditText
        android:id="@+id/new_mon_desc"
        android:hint="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_mon_url"
        android:hint="@string/img_url"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:onClick="saveMonster"
            android:text="@string/save"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="cancel"
            android:text="@string/cancel"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>
